# autoseg

./: .gitignore  README.md  pyproject.toml
autoseg/: access.py  dados.py  utils.py
notebooks/: dev.ipynb  etl_autoseg.ipynb
